added some youtube videos to the vidography portion and styled,

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,7 @@
           </a>
         </div>
     </section>
+    <!--WEB DEVELOPMENT-->
     <section id="web-dev" class="media-section text-center py-4" style="background-color: #6f42c1;">
       <div class="container text-center py-3">
         <img src="/imgs/web_development/Web Development.png" alt="Web Development Logo" class="img-fluid mb-2" style="max-width: 200px;">
@@ -171,6 +172,7 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
         </div>
       </div>
     </section>
+    <!--VIDEOGRAPHY-->
     <section id="video" class="media-section text-center py-4" style="background-color: #6f42c1;">
       <div class="container text-center py-3">
         <img src="/imgs/video/videography.png" alt="Videography Logo" class="img-fluid mb-2" style="max-width: 200px;">
@@ -182,60 +184,99 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
         <div class="container">
           <div class="row justify-content-center mt-4">
 
-      <!-- Video 1 -->
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <video class="project-video" poster="/imgs/video/freedom sc.PNG" controls>
-            <source src="/imgs/video/Freedom_1.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-          </video>
-          <div class="project-overlay">
-            <div class="overlay-content">
-              <p class="project-description">
-              <strong>Project Signed: Freedom</strong><br>
-                An artistic ASL interpretation of “Freedom” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Andrew Tolman, with choreography by Divine. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
-              </p>
-              <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+            <!-- Video 1 -->
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <video class="project-video" poster="/imgs/video/freedom sc.PNG" controls>
+                  <source src="/imgs/video/Freedom_1.mp4" type="video/mp4" />
+                      Your browser does not support the video tag.
+                </video>
+                <div class="project-overlay">
+                  <div class="overlay-content">
+                    <p class="project-description">
+                    <strong>Project Signed: Freedom</strong><br>
+                      An artistic ASL interpretation of “Freedom” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Andrew Tolman, with choreography by Divine. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
+                    </p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Video 2 -->
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <video class="project-video" poster="/imgs/video/IMG_3475.PNG" controls>
+                  <source src="/imgs/video/Formation_1.mp4" type="video/mp4" />
+                      Your browser does not support the video tag.
+                </video>
+                <div class="project-overlay">
+                  <div class="overlay-content">
+                    <p class="project-description">
+                    <strong>Project Signed: Freedom</strong><br>
+                      An artistic ASL interpretation of “Formation” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
+                    </p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Video 3 -->
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <video class="project-video" poster="/imgs/video/forward sc.PNG" controls>
+                  <source src="/imgs/video/Forward 3_1.mp4" type="video/mp4" />
+                      Your browser does not support the video tag.
+                </video>
+                <div class="project-overlay">
+                  <div class="overlay-content">
+                    <p class="project-description">
+                    <strong>Project Signed: Freedom</strong><br>
+                      An artistic ASL interpretation of “Forward” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Cornelious Poston. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
+                    </p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!--Video 4-->
+          <div class="row justify-content-center mt-4">
+          <div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe
+                        src="https://www.youtube.com/embed/WeoSFhMNwp4?si=uqyNf0m4weylKCtp"
+                        title="YouTube video player"
+                        allowfullscreen
+                        referrerpolicy="strict-origin-when-cross-origin"
+                      ></iframe>
+                  </div>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>MMPD Intro/Outro Redesign</strong><br>
+                      This bold new intro/outro package reintroduces the Multimedia Professional Development brand with motion graphics, symbolic visuals, and a custom soundtrack—all crafted to break the mold of traditional PD. From a shattered play button over DNA strands to a cosmic journey through modern learning, every element was intentionally designed to reflect connection, creativity, and growth. This isn’t just a rebrand—it’s a visual manifesto for how we move forward.                  </p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-      <!-- Video 2 -->
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <video class="project-video" poster="/imgs/video/IMG_3475.PNG" controls>
-            <source src="/imgs/video/Formation_1.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-          </video>
-          <div class="project-overlay">
-            <div class="overlay-content">
-              <p class="project-description">
-              <strong>Project Signed: Freedom</strong><br>
-                An artistic ASL interpretation of “Formation” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
-              </p>
-              <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+          <!--Video 5-->
+          <div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
+              <a href="https://youtu.be/ea7nrytl-ls?si=p0XG2kYC4u0u9R4R" target="_blank" class="video-thumbnail-link">
+                <img src="/imgs/video/kingme sc.png" alt="King Me - Ep1" class="project-img">
+              </a>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>King Me: Rise of A Drag King</strong><br>
+                    A dynamic YouTube competition series spotlighting Drag Kings from across the country. I joined during its launch and helped grow the channel to nearly 2,000 followers. For Season 1 (7 episodes), I edited all submissions in Adobe Premiere Pro, created promotional content in iMovie, and designed the intro animation in After Effects, backed by music from Jayyvon Monroe.
+                  </p>
+                  <a href="https://youtu.be/ea7nrytl-ls?si=p0XG2kYC4u0u9R4R" target="_blank" class="overlay-btn">Visit YouTube</a>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-      <!-- Video 3 -->
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <video class="project-video" poster="/imgs/video/forward sc.PNG" controls>
-            <source src="/imgs/video/Forward 3_1.mp4" type="video/mp4" />
-                Your browser does not support the video tag.
-          </video>
-          <div class="project-overlay">
-            <div class="overlay-content">
-              <p class="project-description">
-              <strong>Project Signed: Freedom</strong><br>
-                An artistic ASL interpretation of “Forward” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Cornelious Poston. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
-              </p>
-              <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
