Finished coding the rest of my videography youtube iframes

--- a/portfolio.html
+++ b/portfolio.html
@@ -263,6 +263,118 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
           <!--Video 5-->
           <div class="col-md-6 col-lg-4 mb-4 project-tile">
             <div class="tile-wrapper">
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/sTwlfMsKIVc?si=kubBG1RH84rYA2lO" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen></iframe>
+                  </div>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>Riley Redd and Wally Wormwood: Animated Communication</strong><br>
+                      I pitched and developed Riley Redd, a fully animated spokesperson inspired by the TUSD apple logo, to help transform district communication. Designed and rigged in Adobe tools, Riley—along with their clever sidekick Wally Wormwood—adds personality, clarity, and warmth to announcements and trainings. Built entirely on my own time, this project shows how existing tools can be used creatively to connect with staff and students in a fresh, engaging way.</p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Video 6-->
+          <div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/videoseries?si=OFducvNpg4EZjM_a&amp;list=PLOhIhcxdXA1t6_93NoIjCiAuQ4C1WDTT7" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen></iframe>
+                  </div>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>TUSD Annual Mandatory Trainings Playlist</strong><br>
+                      This series of six mandatory training videos was my first major district-wide project for Tucson Unified. Originally refreshed with a modern blue background, I led the redesign, editing, and motion graphics using Adobe Premiere Pro and After Effects. For the past three years, I’ve updated the content annually to reflect current policies and branding, ensuring consistency and clarity across all departments. These videos are viewed by over 8,500 teachers, staff, and administrators each school year and are tied to mandatory compliance credit—making them one of the most widely viewed productions in the district.</p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Watch Playlist</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Video 7-->
+          <div class="row justify-content-center mt-4">
+          <div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/T6aA1WP9cQA?si=i2r4E2XIcvQzk8gG&amp;start=6" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen></iframe>
+                  </div>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>OMA Promotional Video: Creative B-Roll Cinematography</strong><br>
+                      For this district-wide promotional video for Opening Minds through the Arts (OMA), I served as the primary B-roll cinematographer. Working with limited gear, I manually focused and framed each shot to highlight the energy and creativity of the classroom scenes. Many of the smooth sliding and zooming shots were captured using improvised techniques—gliding the camera on student chairs across carpet, or sliding it on napkins and books over desks. This hands-on, resourceful approach allowed me to produce polished, intentional visuals that bring the OMA experience to life without relying on high-end equipment.</p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Video 8-->
+          <div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/eJWY4PbRSsg?si=0vj2duhlA2ECK12g&amp;start=10" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen></iframe>
+                  </div>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>CharacterStrong Promo: Creative Direction</strong><br>
+                      This promotional video was created to highlight the benefits of CharacterStrong, supporting Social Emotional Learning (SEL) initiatives within Tucson Unified. I took the lead on creative direction—guiding the visual storytelling, interview flow, and shot composition to highlight how art integration fosters emotional growth and student connection. I used Adobe Premiere Pro and After Effects to edit and polish the final piece, blending impactful footage with thoughtful pacing and transitions. This project reflects my ability to shape promotional content that resonates deeply, showcases district programs, and communicates the heart of student-centered learning.</p>
+                    <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Video 9-->
+          <div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
+              <div class="ratio ratio-16x9 mb-4">
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/_stNEADo0JA?si=af1h_iSZzOJ08kfW" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen></iframe>
+                  </div>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>Mission View Elementary Dual Language Program Promo</strong><br>
+                    This was the very first promotional video I created for Tucson Unified, spotlighting one of our Dual Language Magnet Schools. I led the entire creative direction and post-production editing, while collaborating with a team of videographers to capture B-roll and conduct interviews. I personally mic’d up students and staff, asked guided questions, and oversaw the shoot from concept to final cut. This project marked the beginning of my journey as a Multimedia Specialist at TUSD and reflects the storytelling instincts and technical skills I’ve continued to build upon ever since. From scripting to sound design, this piece set the tone for the work I strive to do.</p>
+                  <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+          <!--Video cut-->
+          <!--<div class="col-md-6 col-lg-4 mb-4 project-tile">
+            <div class="tile-wrapper">
               <a href="https://youtu.be/ea7nrytl-ls?si=p0XG2kYC4u0u9R4R" target="_blank" class="video-thumbnail-link">
                 <img src="/imgs/video/kingme sc.png" alt="King Me - Ep1" class="project-img">
               </a>
@@ -276,7 +388,7 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
     </div>
   </div>
 </section>
