Added graphic design section, created graphic img folder for gd images

--- a/portfolio.html
+++ b/portfolio.html
@@ -389,9 +389,25 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
               </div>
             </div>
           </div>-->
-    </div>
-  </div>
-</section>
+        </div>
+      </div>
+    </section>
+    <!--GRAPHIC DESIGN-->
+    <section id="graphics" class="media-section text-center py-4" style="background-color: #6f42c1;">
+      <div class="container text-center py-3">
+        <img src="/imgs/graphics/Graphic Design.png" alt="Videography Logo" class="img-fluid mb-2" style="max-width: 200px;">
+        <h2 class="text-white">Graphic Design</h2>
+      </div>
+    </section>
+    <section>
+      <div class="light-bg py-4">
+        <div class="container">
+          <div class="row justify-content-center mt-4">
+            <p>coming soon</p>
+      </div>
+      </div>
+      </div>
+          </section>
   </main>
   <footer class="site-footer py-4 mt-3">
   <div class="container text-center text-white">
