--- a/portfolio.html
+++ b/portfolio.html
@@ -395,7 +395,7 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
     <!--GRAPHIC DESIGN-->
     <section id="graphics" class="media-section text-center py-4" style="background-color: #6f42c1;">
       <div class="container text-center py-3">
-        <img src="/imgs/graphics/Graphic Design.png" alt="Videography Logo" class="img-fluid mb-2" style="max-width: 200px;">
+        <img src="/imgs/graphics/Graphic Design.png" alt="Graphic Design Logo" class="img-fluid mb-2" style="max-width: 200px;">
         <h2 class="text-white">Graphic Design</h2>
       </div>
     </section>
@@ -403,7 +403,28 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
       <div class="light-bg py-4">
         <div class="container">
           <div class="row justify-content-center mt-4">
-            <p>coming soon</p>
+            <div class="col-12 col-md-6 d-flex justify-content-center">
+  <div class="tile-wrapper position-relative catalog-wrapper">
+    <iframe 
+      class="catalog-iframe"
+      allowfullscreen="allowfullscreen" 
+      allow="clipboard-write" 
+      scrolling="no"
+      src="https://heyzine.com/flip-book/0218c1215b.html" 
+      style="border: 0px; width: 100%; height: 496px;">
+    </iframe>
+
+    <div class="project-overlay">
+      <div class="overlay-content">
+        <p class="project-description">
+          <strong>Welcome Back Catalog – Kentucky Derby Theme</strong><br>
+          A vibrant, interactive flipbook created for TUSD administrators to kick off the school year. Features event schedules, key messages, and themed design elements created in Illustrator and InDesign.
+        </p>
+        <button class="overlay-btn" onclick="viewCatalog(this)">View Catalog</button>
+      </div>
+    </div>
+  </div>
+</div>
       </div>
       </div>
       </div>
