heyzine catalogs are added to the portfolio graphic design portion, stylized, and reactive with descriptions for each one, updated this section description.

--- a/portfolio.html
+++ b/portfolio.html
@@ -403,8 +403,13 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
     <section class="light-bg py-5">
       <div class="container">
         <div class="text-center mb-4">
-          <h3 class="text-uppercase" style="color: #6f42c1; font-weight: bold;">Interactive Catalogs</h3>
-          <p>Designed using Adobe InDesign, Illustrator, and Canva for district-wide distribution and engagement.</p>
+          <h3 class="text-uppercase" style="color: #6f42c1; font-weight: bold;">Program and Catalog Design</h3>
+          <p>
+            This collection showcases a series of professionally designed catalogs and programs created for Tucson Unified School District, each tailored to elevate communication, celebrate milestones, and streamline professional learning. Using Adobe Illustrator, InDesign, Photoshop, Adobe Acrobat and Adobe Express, I crafted both print-ready and digital versions that are visually compelling, highly functional, and deeply aligned with each project’s purpose. These catalogs and programs were created in collaboration with various departments and often under tight deadlines, highlighting my adaptability, cross-functional communication, and design strategy.
+          </p>
+          <p>
+            Each interactive flipbook below is hosted through <a class="description-link" href="https://heyzine.com/" target="_blank">Heyzine</a> and is fully navigable. You can flip through pages by tapping, clicking or clicking and dragging the page corners, if on a computer you can also use your arrow keys. At the bottom of each design, you can drag the slider bar at the bottom for quick navigation, or enter fullscreen mode for a clearer, immersive experience. Whether printed or viewed digitally, each catalog has been thoughtfully designed for maximum readability, accessibility, and visual impact.
+          </p>
         </div>
         <div class="row gy-4">
           <!-- Catalog 1 -->
@@ -415,7 +420,69 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
                 <div class="overlay-content">
                   <p class="project-description">
                     <strong>Welcome Back Catalog – Kentucky Derby Theme</strong><br>
-                    A vibrant, interactive flipbook created for TUSD administrators to kick off the school year. Features event schedules, key messages, and themed design elements created in Illustrator and InDesign.
+                    One of my proudest design achievements, this catalog was created for TUSD’s annual district-wide administrative kickoff event. Inspired by the Kentucky Derby, I developed a unique visual theme—“Kentucky Derby in the Desert”—blending vintage horse racing aesthetics with the rich tones and culture of the Southwest. The desert-inspired color palette and layout paid homage to Mexican cross-country racing and the symbolic “Triple Crown of Education.”
+                 <br />
+                  Designed in Adobe Illustrator and InDesign, the catalog was developed for print and distributed to hundreds of district leaders. Despite major last-minute content and schedule changes, I maintained both design integrity and printing deadlines through strategic layout planning and flexible asset management. This project reflects not only my storytelling and branding abilities, but also my ability to pivot quickly under pressure while maintaining a polished, professional result.                  
+                  </p>
+                  <button class="overlay-btn" onclick="viewCatalog(this)">View Catalog</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Catalog 2-->
+          <div class="col-12 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative catalog-wrapper">
+              <iframe class="catalog-iframe" src="https://heyzine.com/flip-book/fa2b946eb8.html" allowfullscreen></iframe>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>Teacher Development Academy Catalog</strong><br>
+                    This catalog was developed to support TUSD’s Teacher Development and Assistance (TDA) program for new educator cohorts. Drawing inspiration from the official TDA logo, I wove branded design elements and colors throughout the layout to maintain visual cohesion and professional appeal. Created using Adobe Illustrator, InDesign, and Photoshop, this piece was designed for both digital distribution and print. The final product serves as a practical, welcoming resource for new teachers while reinforcing TUSD’s commitment to professional growth and TDA's five pilars of instructional excellence.
+                  </p>
+                  <button class="overlay-btn" onclick="viewCatalog(this)">View Catalog</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Catalog 3-->
+          <div class="col-12 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative catalog-wrapper">
+              <iframe class="catalog-iframe" src="https://heyzine.com/flip-book/a7614ddc19.html" allowfullscreen></iframe>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>Literacy Framework Catalog</strong><br>
+                    Designed with a playful and engaging visual style for a K–5 audience, this catalog highlights the instructional planning and literacy practices used across the district. I used Adobe Illustrator, InDesign, and Adobe Express to build both print and digital versions, ensuring accessibility for educators and administrators. Shared via Adobe Express for collaborative feedback, the catalog features cheerful patterns and vibrant layouts. I also utilized Adobe AI to rapidly generate age-appropriate vector graphics, helping complete the project under a tight deadline. This piece celebrates the creativity and coordination it takes to support early literacy at scale.
+                  </p>
+                  <button class="overlay-btn" onclick="viewCatalog(this)">View Catalog</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Catalog 4-->
+          <div class="col-12 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative catalog-wrapper">
+              <iframe class="catalog-iframe" src="https://heyzine.com/flip-book/2169c132a0.html" allowfullscreen></iframe>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>Badger Foundation - 100 Year Commemoration Program</strong><br>
+                      A commemorative print program created for the Badger Foundation's 100-Year Celebration of Tucson High School. Designed using Adobe Illustrator and InDesign, this piece honored hundreds of distinguished alumni, guided event attendees through the celebration, highlighted the history of the school, and served as a key fundraising tool for the foundation. It was professionally printed and distributed at the event to celebrate a century of legacy and community impact.
+                    </p>
+                  <button class="overlay-btn" onclick="viewCatalog(this)">View Catalog</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Catalog 5-->
+          <div class="col-12 d-flex justify-content-center">
+            <div class="tile-wrapper position-relative catalog-wrapper">
+              <iframe class="catalog-iframe" src="https://heyzine.com/flip-book/326259f92c.html" allowfullscreen></iframe>
+              <div class="project-overlay">
+                <div class="overlay-content">
+                  <p class="project-description">
+                    <strong>TUSD Professional Learning Course Catalog</strong><br>
+                    Created using Adobe InDesign and Illustrator, this dynamic catalog was designed for both print and digital distribution. The digital version included embedded hyperlinks that allowed educators to register directly for courses. I collaborated with over seven departments to curate accurate course descriptions and align offerings with district goals. To enhance representation and engagement, I used AI-generated imagery to reflect the diverse demographics of TUSD staff. This project challenged me to balance accessibility, design consistency, and cross-departmental communication while delivering a versatile and user-friendly resource for professional learning.
                   </p>
                   <button class="overlay-btn" onclick="viewCatalog(this)">View Catalog</button>
                 </div>
